--- a/index/style.css
+++ b/index/style.css
@@ -5,3 +5,13 @@
 .headerSetting {
   margin-left: 10px;
 }
+
+.container {
+  display: flex;
+  flex-wrap: column wrap;
+}
+
+.post {
+  border: 2px;
+  border-color: black;
+}
